# pos-qr-display

./: .gitignore  README.md
docs/: SPEC.md
firmware/: partitions.csv  sdkconfig  sdkconfig.defaults
firmware/drivers/: lcd_st7701.c  lcd_st7701.h  touch_gt911.c  touch_gt911.h
firmware/main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c
firmware/services/: mqtt_service.c  mqtt_service.h  qr_service.h  time_service.c  time_service.h  wifi_service.c  wifi_service.h
firmware/ui/: bg_rain.c  bg_rain.h  font_vietnam_20.c  idle_screen.c  idle_screen.h  qr_screen.c  qr_screen.h  ui.c  ui.h  ui_router.h
